config-root/namespaces/jx-staging/tickets-service/tickets-service-tickets-service-deploy.yaml
# Source: tickets-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-service-tickets-service
  labels:
    draft: draft-app
    chart: "tickets-service-0.0.39"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: tickets-service-tickets-service
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: tickets-service-tickets-service
    spec:
      containers:
        - name: tickets-service
          image: "gcr.io/camunda-researchanddevelopment/tickets-service:0.0.39"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 400m
              memory: 512Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
