config-root/namespaces/jx-staging/tickets-service/tickets-service-svc.yaml
# Source: tickets-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tickets-service
  labels:
    chart: "tickets-service-0.0.39"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: tickets-service-tickets-service
