config-root/namespaces/jx-staging/tickets-service/tickets-service-ingress.yaml
# Source: tickets-service/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: tickets-service
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: tickets-service
              servicePort: 80
      host: tickets-service-jx-staging.35.222.17.41.nip.io
